collapse navlink fix, dropdown style changes

--- a/Sami-Pages-Rails/app/assets/stylesheets/custom.scss
+++ b/Sami-Pages-Rails/app/assets/stylesheets/custom.scss
@@ -34,6 +34,10 @@ body {
   color:purple;
 }
 
+.dropdown-link{
+  font-size: 24px;
+}
+
 /* Content */
 .fill{
   min-height: 90%;
